--- a/Unit Converter/Base.lproj/Main.storyboard
+++ b/Unit Converter/Base.lproj/Main.storyboard
@@ -22,11 +22,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="NOf-ti-b8d">
-                                <rect key="frame" x="131" y="135" width="113" height="29"/>
+                                <rect key="frame" x="46" y="135" width="283" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="Length"/>
                                     <segment title="Area"/>
+                                    <segment title="Volume"/>
+                                    <segment title="Currency"/>
                                 </segments>
                             </segmentedControl>
                         </subviews>
