I have now set up the UI interface for the area file. I am now looking for a way to make it so that I can save it so that everything will be nice and uniform, and attractive. To do: Give the UI Picker brains (for the Area file)

--- a/Unit Converter/Base.lproj/Main.storyboard
+++ b/Unit Converter/Base.lproj/Main.storyboard
@@ -82,12 +82,29 @@
                     <view key="view" contentMode="scaleToFill" id="xQd-CU-ysN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H2W-NN-HM0">
+                                <rect key="frame" x="0.0" y="112" width="375" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibi-0C-a5o">
+                                <rect key="frame" x="129" y="373" width="116" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="areaOutput" destination="ibi-0C-a5o" id="NnN-ZP-Uyv"/>
+                        <outlet property="areaPicker" destination="H2W-NN-HM0" id="5dM-2k-3DO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sL1-cv-cfG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="646" y="2594"/>
+            <point key="canvasLocation" x="645.60000000000002" y="2593.8530734632686"/>
         </scene>
         <!--Length-->
         <scene sceneID="ySN-Ac-XDj">
